Fixed layout issues on results page

--- a/restaurants/static/restaurants/results.css
+++ b/restaurants/static/restaurants/results.css
@@ -59,71 +59,20 @@ nav {
     align-self: center;
     justify-content: center;
     margin-top: 30px;
-}
+}                                
 
-                                /* Sidebar */
 .sidebar-container {
-    /* display: block; */
-    flex: 50%;
-    background-color: #fbfbfc;
-    padding: 1rem;
-    box-shadow: 0 0 0 1px rgba(67,41,163,.1), 0 1px 8px 0 rgba(67,41,163,.1)
-        /* box-shadow codes from grubhub.com */
-    }
-.sidebar-container > p {
-    font-size: 1.6rem;  
-    font-weight: 900; 
-    margin-top: 30px;
-    margin-bottom: 40px;
-    color: var(--Orange);
+    display: none;
 }
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-label {
-    font-size: 1rem;   
-    font-weight: 700; 
-}
-input, select {
-    margin: 10px 0;
-    padding: 12px;
-    font-size: .9rem;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(220, 220, 220);
-    border-radius: 5px;
-    transition: box-shadow .3s;
-}
-input:hover, select:hover {
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2) ;
-        /* https://boxshadows.com/presets */
-}
-input[type=submit] {
-    background-color: var(--Orange);
-    color: white;
-    font-size: 1rem;
-    font-weight: 600;
-    border-style: none;
-    border-radius: 5px;
-    padding: 15px;
-    transition: box-shadow .3s;
-}
-input[type=submit]:hover {
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2) ;
-        /* https://boxshadows.com/presets */
-}
-
                                 /* Cards Container */
 .cards-container {
     display: flex; 
     flex-wrap: wrap;   
-    /* width: 100%; */
-    flex: 100%;
+    width: 100%;
+    flex: 0 0 100%;
 }
 
-.cards-container > a {
+.card-link {
     width: 100%;
 }
 
@@ -149,7 +98,7 @@ input[type=submit]:hover {
 }
 img {
     width: 100%;
-    height: 14rem;
+    height: 15rem;
     object-fit: cover;
     border-radius: 5px;
 }
@@ -198,45 +147,100 @@ footer a:visited {
     color: rgb(0, 98, 255);
 }
 
+
 @media only screen and (min-width: 768px) {
     .card {
         flex-direction: row;
     }
+    .card-img {
+        flex: 1 0 50%;
+    }
+    .caption {
+        flex: 0 0 50%;
+    }    
 }
 
 @media only screen and (min-width: 992px) {    
-    .filters-bar {
-        display: none;
-    }
-
-    .card {
-        flex-direction: row;
-    }
-    img {
-       width: 200px;
-       height: 200px;
-       margin-left: 10px;
-    }
-    .caption {
-        text-align: left;
-    }
-    .empty-card {
-        display: none;
-    }
-
     .sidebar-and-cards-container {
         flex-direction: row;
+    }  
+    
+    .filters-bar {
+        display: none;
     }    
+                                /* Sidebar */
+    .sidebar-container {
+        display: block;
+        flex: 0 0 25%;
+        background-color: #fbfbfc;
+        padding: 1rem;
+        box-shadow: 0 0 0 1px rgba(67,41,163,.1), 0 1px 8px 0 rgba(67,41,163,.1)
+            /* box-shadow codes from grubhub.com */
+        }
+    .sidebar-container > p {
+        font-size: 1.6rem;  
+        font-weight: 900; 
+        margin-top: 30px;
+        margin-bottom: 40px;
+        color: var(--Orange);
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    label {
+        font-size: 1rem;   
+        font-weight: 700; 
+    }
+    input, select {
+        margin: 10px 0;
+        padding: 12px;
+        font-size: .9rem;
+        border-width: 1px;
+        border-style: solid;
+        border-color: rgb(220, 220, 220);
+        border-radius: 5px;
+        transition: box-shadow .3s;
+    }
+    input:hover, select:hover {
+        box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2) ;
+            /* https://boxshadows.com/presets */
+    }
+    input[type=submit] {
+        background-color: var(--Orange);
+        color: white;
+        font-size: 1rem;
+        font-weight: 600;
+        border-style: none;
+        border-radius: 5px;
+        padding: 15px;
+        transition: box-shadow .3s;
+    }
+    input[type=submit]:hover {
+        box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2) ;
+            /* https://boxshadows.com/presets */
+    }
+                                /* End Sidebar */
+
+    .cards-container {
+        flex: 0 0 75%;
+    }
+
+    .card-img {
+        flex: 0 0 30%;
+    }
+    .caption {
+        flex: 0 0 70%;
+    }    
+            
+    /* .empty-card {
+        display: none;
+    } */      
 }
 
 @media only screen and (min-width: 2000px) {    
     html {
         font-size: 22px;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .sidebar-container {
-        display: none;
     }
 }
